src/objects/ExternalServiceOutbound__e.object
<CustomObject><fields>
        <fullName>ExternalServiceID__c</fullName>
        <description>Reference to ExternalService__c object associated with this Event</description>
        <label>External Service ID</label>
        <length>25</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Payload__c</fullName>
        <description>JSON representation of Request to External Service</description>
        <label>Payload</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>ServiceName__c</fullName>
        <description>Name of External Service</description>
        <label>Service Name</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </fields><deploymentStatus>Deployed</deploymentStatus><description>Platform Event to an External Service.</description><eventType>StandardVolume</eventType><label>External Service Outbound</label><pluralLabel>External Service Outbound</pluralLabel></CustomObject>